--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>
 		Boulanger © - Electroménager et Multimédia
 </title>
+<script src="https://resources.crowdtwist.com/v259/widgets/javascripts/widgets-sdk.0.3.0.js"></script>
 		<meta name="description"
 			content="Profitez de tous les services Boulanger ! Livraison Offerte* - Retrait 1h en Magasin* - Retrait Drive* - Garantie 2 ans* - SAV 7j/7" />
 		<meta name="keywords"
@@ -2944,6 +2945,7 @@ CONSTANTS["activate.connect.username"] = true;
 				</map>
 			</div>
 </div>
+<div class="ct-widget" data-widget-id="11934" data-src="https://4-widgets.ascentrewards.co/widgets/t/account-overview-two/11934"></div>
 					<script>
 						window.addEventListener("DOMContentLoaded", (event) => {
 							var variables = { };
