--- a/index.html
+++ b/index.html
@@ -2933,6 +2933,10 @@ CONSTANTS["activate.connect.username"] = true;
 							</div>
 	</div>
 <div class="ct-widget" data-widget-id="11934" data-src="https://4-widgets.ascentrewards.co/widgets/t/account-overview-two/11934"></div>
+<br>
+<div class="ct-widget" data-widget-id="13494" data-src="https://4-widgets.ascentrewards.co/widgets/t/activity-list/13494"></div>
+<br>
+<div class="ct-widget" data-widget-id="13980" data-src="https://4-widgets.ascentrewards.co/widgets/t/reward-list/13980"></div>
 <div class="emsDyn monoLarge ">
 			<div class="static">
 			<img src="is/image/boulanger/store-locatordefok2def_wid_1000_qlt_100.jpg" title="" alt="" usemap="#locEMS_DESKTOP_HP_4_">
