--- a/index.html
+++ b/index.html
@@ -2934,10 +2934,10 @@ CONSTANTS["activate.connect.username"] = true;
 	</div>
 <div class="ct-widget" data-widget-id="11934" data-src="https://4-widgets.ascentrewards.co/widgets/t/account-overview-two/11934"></div>
 <br>
-		<h2 class="h2spec">ACTIVITÉS</h2>
+		<h2 class="h2spec"><span>ACTIVITÉS</span></h2>
 <div class="ct-widget" data-widget-id="13494" data-src="https://4-widgets.ascentrewards.co/widgets/t/activity-list/13494"></div>
 <br>
-		<h2 class="h2spec">AVANATGES</h2>
+		<h2 class="h2spec"><span>AVANTAGES</span></h2>
 <div class="ct-widget" data-widget-id="13980" data-src="https://4-widgets.ascentrewards.co/widgets/t/reward-list/13980"></div>
 <div class="emsDyn monoLarge ">
 			<div class="static">
