--- a/index.html
+++ b/index.html
@@ -2932,27 +2932,7 @@ CONSTANTS["activate.connect.username"] = true;
 			</script>
 							</div>
 	</div>
-<li style="width:10%;">
-			<a href="index.html#searchinputmode=product">
-				<svg viewBox="-17.1 383.6 133.1 27.8">
-					<polygon  points="-4.3,391.4 -17.1,411.3 -8.4,411.3 3.9,392.3 " />
-					<path  d="M-4,391c0,0,3-4.9,3.8-5.9c0.6-0.9,1.6-1.4,2.7-1.4h13.2v6.7c0.4-1.4,1-2.7,1.9-3.8c1.5-1.8,3.7-2.9,6-3h24.9
-                v7.4H-4z" />
-					<path
-						d="M116,391v-7.3H89.4c-2.3,0.1-4.5,1.2-6,3c-0.9,1.1-1.5,2.4-1.9,3.8v0.5H116z" />
-					<rect x="49.6" y="383.7"  width="7.4" height="7.3" />
-					<rect x="74.1" y="383.7"  width="7.4" height="7.3" />
-					<path  d="M81.5,393.6l-7.3-0.4v8.5c0,1.3-1,2.4-2.3,2.4c0,0,0,0-0.1,0H59.2c-1.2-0.1-2.2-1.2-2.1-2.4V392l-7.4-0.5v13
-                c0.5,3.5,3.4,6.3,6.9,6.7h0.7h17c0,0,7.3-0.6,7.3-7.5L81.5,393.6L81.5,393.6z" />
-					<path  d="M8.1,411.3h34.8c3.4-0.6,6.1-3.2,6.7-6.7c0.2-1,0.2-1.9,0.1-2.9c-0.2-1.1-2.3-5.9-6.8-6.3
-                c-2.7-0.3-26.9-2.1-26.9-2.1c0.3,1.6,1.1,3.2,2.3,4.3c1.3,1,2.7,1.7,4.3,2l18.6,1.5c0.8-0.1,1.5,0.5,1.6,1.3c0,0.1,0,0.2,0,0.3
-                c0,0.8-0.7,1.4-1.5,1.4c0,0,0,0,0,0h-26v-10.9l-7.2-0.5L8.1,411.3L8.1,411.3z" />
-					<path  d="M81.6,404h25.9c0.4,0,0.9-0.1,1.3-0.3c0.3-0.3,0.5-0.7,0.5-1.1c0-0.8-0.6-1.5-1.5-1.5c-0.1,0-0.2,0-0.3,0
-                l-18.8-1.6c-1.6-0.3-3-1-4.2-2c-1.2-1-2.1-2.4-2.4-3.9c0,0,24.3,1.4,27,1.7c4.6,0.4,6.7,4.9,6.9,6.4c0.1,1,0.1,2,0,3
-                c-0.6,3.7-3.8,6.5-7.6,6.6H81.6L81.6,404z" />
-				</svg>
-			</a>
-		</li>
+<h2 class="h2spec"><span>ADHÉRENT</span></h2>
 <div class="ct-widget" data-widget-id="11934" data-src="https://4-widgets.ascentrewards.co/widgets/t/account-overview-two/11934"></div>
 		<h2 class="h2spec"><span>ACTIVITÉS</span></h2>
 <div class="ct-widget" data-widget-id="13494" data-src="https://4-widgets.ascentrewards.co/widgets/t/activity-list/13494"></div>
